--- a/Population/requirements.txt
+++ b/Population/requirements.txt
@@ -1,1 +1,9 @@
-django~=2.2
+certifi==2021.10.8
+charset-normalizer==2.0.12
+Django==2.2.28
+djangorestframework==3.13.1
+idna==3.3
+pytz==2022.1
+requests==2.27.1
+sqlparse==0.4.2
+urllib3==1.26.9
